fix: wrap the error text to avoid main area expanding

--- a/src/assets/css/notification.css
+++ b/src/assets/css/notification.css
@@ -5,4 +5,5 @@
 .notification--error {
 	color: var(--notification-error-color);
 	margin: unset;
+	white-space: pre-wrap;
 }
